# rsvoicebot

./: Cargo.toml  errors.txt
bot/: Cargo.toml  Dockerfile  docker-compose.yml
bot/src/: audio_conversion.rs  benchmark.rs  ffmpeg_converter.rs  lib.rs  main.rs  speech_to_text.rs  symphonia_converter.rs
bot/tests/: audio_conversion_test.rs  audio_conversion_tests.rs  ffmpeg_converter_test.rs  symphonia_converter_tests.rs  whisper_stt.rs  whisper_stt_test.rs
models/: .gitignore
src/: audio_conversion.rs  ffmpeg_converter.rs  lib.rs  main.rs
tests/: audio_conversion_tests.rs
