[package]
name = "voicebot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tempfile = "3.12.0"
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
hound = "3.5"

[[bin]]
name = "voicebot"
path = "src/main.rs"

[lib]
name = "voicebot"
path = "src/lib.rs"
 
[dev-dependencies]
which = "4.4"
